fixed a few layout issues, added a scroll for filtered questions, and fixed the decoding of the html tags inside the questions

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  max-width: 1280px;
+  width: 70%;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -39,4 +39,8 @@
 
 .read-the-docs {
   color: #888;
+}
+
+main {
+  width: fit-content;
 }
